# OpinionANN

./: .gitmodules  CMakeLists.txt  InputParser.h  OpinionAnalysisNetwork.h  SentenceAnalysisNetwork.h  WordAnalysisLevel.h  WordsInputLayer.h  WordsLayer.h
include/: FileManager.h  Input.h  InputLayer.h  InputParser.h  MiddleLayer.h  NeuralNetwork.h  NeuronLayer.h  OpinionAnalysisLevel.h  OpinionInputLayer.h  SentenceAnalysisLevel.h  SentenceInputLayer.h  SentimentalAnalysis.h  UserInterface.h  WordAnalysisLevel.h  WordsInputLayer.h
src/: FileManager.cpp  InputParser.cpp  MiddleLayer.cpp  NeuralNetwork.cpp  NeuronLayer.cpp  OpinionAnalysisLevel.cpp  OpinionAnalysisNetwork.cpp  OpinionInputLayer.cpp  SentenceAnalysisLevel.cpp  SentenceAnalysisNetwork.cpp  SentenceInputLayer.cpp  SentimentalAnalysis.cpp  UserInterface.cpp  WordAnalysisLevel.cpp  WordsInputLayer.cpp  WordsLayer.cpp  main.cpp
